# TrlinkosTrmFractalDagWeb

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  =1.20.0  ACTIVATION_GUIDE.md  ACTIVATION_SUMMARY.md  ANALYSE_COMPARATIVE_HONNETE_LLM.md  ANALYSE_IMPACT_CONNEXION_INTERNET.md  ANALYSE_IMPACT_TECHNOLOGIQUE.md  AUDIT_COHERENCE.md  BILAN_FINAL.md  BILAN_TECHNIQUE_IA.md  BLUEPRINTS_INTEGRATION.md  CI_CD.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  SYNTHESE_ANALYSE_IMPACT.md  SYSTEM_ASSESSMENT.md  THRML_INTEGRATION.md  THRML_SUMMARY.md  TRUTHFULNESS.md  api.py  api_enhanced.py  config.py  dag_visualizer.py  datasets.py  download_data.py  empirical_validation.py  encoders.py  google_homepage.html  google_scraper.py  huggingface_integration.py  launch_training.py  launch_training.sh  mcp.json  multi_gpu_support.py  (+15 more)
.github/workflows/: ci.yml
benchmarks/: __init__.py  formal_benchmarks.py
blueprints/: __init__.py  enhanced_trm.py  goal_monitoring.py  observability.py  resilient_workflow.py  safety_guardrails.py
examples/: __init__.py  blueprints_demo.py  hybrid_demo.py  thrml_demo.py
mcp/: __init__.py  server.py
mcp/tools/: __init__.py  dag.py  model.py  reasoning.py  repo.py  system.py
tests/: __init__.py  conftest.py  test_api.py  test_dag_and_trm.py  test_dcaap_and_cells.py  test_llm_layer.py  test_mcp.py  test_mcp_system.py  test_new_implementations.py  test_torque_and_core.py  test_training_framework.py  test_trlinkos_trm.py  test_truthfulness_validation.py
thrml/: __init__.py
